Fixed--image stretch on mobile v3

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,5 +36,6 @@ body {
 /* IMAGES */
 .img--camp {
     height: auto;
-    min-width: 100%;
+    max-width: 100%;
+    width: auto;
 }
